fixat så learn more knapp stretchar vid rätt storlek

--- a/footer.css
+++ b/footer.css
@@ -222,4 +222,10 @@
          border-bottom: 0;
      }
 
+     .footer-social {
+        justify-content: flex-end;
+     }
+
+   
+
  }
