--- a/style.css
+++ b/style.css
@@ -182,6 +182,15 @@ body {
         max-width: 90%;
     }
 
+  /*   .cta-button {
+        width: 100%;
+        text-align: center;
+        padding: 18px 0;
+        font-size: 18px;
+    } */
+}
+
+@media (max-width: 768px) {
     .cta-button {
         width: 100%;
         text-align: center;
